--- a/001.org
+++ b/001.org
@@ -59,7 +59,7 @@ And by the name of After-Die-Monster, signs of Father-Brother Verk's nearing mad
 
 "He comes! Verk, Son of Jik and his party have been seen moving through Monkey-Tail Pass.", an anonymous clan member shouted just as a general announcement.
 
-That would mean another sun-palm at most.
+That would mean another palm at most.
 
 Grav's attention went back to Gher. "That's what /I/ keep saying." Hoping to shake Gher, as he knew a lecture was coming, he retired to his burrow to think about things.
 
@@ -82,7 +82,7 @@ Verk shifted his weight from one sit-ham to the other in his chair in a way that
 Verk began.
 
 #+begin_quote
-As some of you know, I had a modest part to play in The Battle of the Snake-Meal, which I numbered this morning to be exactly one mouse-spawn suns ago as of today."
+As some of you know, I had a modest part to play in The Battle of the Snake-Meal, which the spin-minders[fn:: Astronomers] inform me was exactly one half of one all-finger all-finger and one[fn:: 51] years ago, exactly as of today.
 
 #+end_quote
 There was a practiced gasp of wonder from the audience.
@@ -263,13 +263,13 @@ The audience rightly guessed that this concluded his talk, and so cheered "rever
 
 Cries of excitement and joy[fn:: Examples include "gnuaah!", "vleeep!", and "kah-joing!"] erupted from the youngest of the clan. The older ones, also anticipating the joy of a good meal and fellowship silently concurred. They were also happy for this awkward and troubling ordeal to be over.
 
-Verk stood, still center-stage on the dais, nodding and smiling to the people as they filed towards the exits and into the all-clan-meal burrow for several relaxing sun-palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning, before Verk's arrival.
+Verk stood, still center-stage on the dais, nodding and smiling to the people as they filed towards the exits and into the all-clan-meal burrow for several relaxing palm of food and banter. No one had eaten. Haste to prepare and receive Verk, along with nervousness had gotten in the way of even dawn-meal. Even if had been practical to sneak a bite, no one would have been seen eating on such a morning, before Verk's arrival.
 
 There was snatching of food and grunting, like that seen at a modern wedding reception.
 
 Verk's gaze caught Grav as he sauntered into the meal burrow. Grav had his usual nonchalance about him and was unimpressed both with Verk's words and his passion. The passion added nothing. The words were confused and poorly connected. They sounded good to most of the audience, but Grav felt that if one had scratched all that out, using neutral language, others would see his point. He did a lot of scratching and was getting very fast at it. He thought he might try something like that some day to see if a literate caveperson would have the same reaction if the ideas were just presented clearly and without emotion.
 
-Grav looked back, looked forward at the meal-burrow door and then swept his head back to Verk again. He was still staring, seemingly angrily. Grav smiled while their eyes remained locked and turned his head back in the direction he was headed in what he hoped was a polite, demur manor. Verk stood motionless as only his head followed the progress of Verk across the burrow. It appeared that his hands were slowly making fists. /He's probably just flexing his fingers/, Grav thought lamely. He'd have to get over Verk. Food!
+Grav looked back, looked forward at the meal-burrow door and then swept his head back to Verk again. He was still staring, seemingly angrily. Grav smiled while their eyes remained locked and turned his head back in the direction he was headed in what he hoped was a polite, demur manor. Verk stood motionless as only his head followed the progress of Grav across the burrow. It appeared that his hands were slowly making fists. /He's probably just flexing his fingers/, Grav thought lamely. He'd have to get over Verk. Food!
 
 Much later, after a responsible (given the occasion) amount of juff and enough to eat (plus half again) for everyone, Grav found himself standing, bowed gently backwards, with most of his weight on his heels, urinating into the relief-hole at the far back arc of the relief-room. A couple of laughing, squealing almost-fertile baby-makers thoroughly woke everyone up as they darted behind him and out of the relief-room[fn:: Bathrooms are not separated by gender. This would strike the Crec as a truly inefficient and pointless arrangement.] enjoying their private joke; almost surely at the expense of some hapless teenage boy.
 
