--- a/002.org
+++ b/002.org
@@ -17,7 +17,7 @@ Not everyone was of this mind. Verk was staying in the burrow just two down from
 
 The relief-burrow was positioned and shaped for optimal sound-deadening, for reasons that would utterly relate to modern readers. It was shaped, looking top-down, something like a daisy; scalloped around the perimeter so that sound would naturally dampen. The walls were also gently bowed outward from top-to-bottom. It offered the predictable visibility and view-ability characteristics of a large, circular room, but didn't have the /acoustical/ characteristics of a large, circular room. Get it?
 
-There was a constant, rather soothing, gurgle and plash of water. Although minimal and somewhat temperamental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and eminently maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one thing down for each one half of one boulder-door thing over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water[fn:: Astonishing fact: After the decline and fall of the Crec and surrounding culture, the next time a similarly-shaped water feature appeared on earth it would be called "The Super Slippery Fun Lagoon", appearing in a New Jersey water park called 'Garden State Water World' in 1934. nb: too goddamn silly.] from the center, where an immense gurgling pot of cold water overflowed continuously.
+There was a constant, rather soothing, gurgle and plash of water. Although minimal and somewhat temperamental, the cave system had a small number of spring-fed water works. The relief-burrow was by a wide margin the biggest consumer of water. The Crav thought it all pretty clever and eminently maintainable: The circular room had a slight, very inconspicuously conical floor that was highest at the center and had a "one part down for each one half of one boulder-door parts over[fn:: 1:50]" grade; enough to keep the entire room's floor (8 man diameter) covered in a sheet of two bowstring-finger-knuckle deep, rapidly moving water[fn:: Astonishing fact: After the decline and fall of the Crec and surrounding culture, the next time a similarly-shaped water feature appeared on earth it would be called "The Super Slippery Fun Lagoon", appearing in a New Jersey water park called 'Garden State Water World' in 1934. nb: too goddamn silly.] from the center, where an immense gurgling pot of cold water overflowed continuously.
 
 This was enough to create two small semicircular rivers from the entrance side of the room, around each half-circle of gutter, to the opposite side, closest to the hill's exterior, for the whole circular gutter was slightly tilted in this way. Once the water met the far side of the room (Where Grav noticed some mesmerizing patterns made by the two "rivers" colliding head-on.), it finally exited the room through a few arm-sized holes heading down what everyone always though of as "the back of the mountain".
 
@@ -45,7 +45,7 @@ What have I done? Please, believe me; my conscience is free and I want to learn 
 
 "Your conscience is free, huh? No, I want you to think on it. That's what you need. Verk stared with noticeable anger still. Nice of you to at least notice I'm put-out with you. Your lot forgotten a lot more than you think you know.
 
-While trying to decipher that, Grav was sure at least some kind of helpful hint was to follow this. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation, gave up, closed his eyes and did his best at a 'reset', so he could think.
+While trying to decipher that, Grav was sure at least some kind of helpful hint was to follow. It seemed to break the very rules of caveperson communication to just leave things hanging like this. He raised his eyebrows in a careful effort to relay this observation, gave up, closed his eyes and did his best at a 'reset', so he could think.
 
 It often seemed that Verk could make it harder for him to do this, as if he had some /power/ that made you instinctively 'squirm' in a mental sense, as opposed to 'gather your thoughts and give a meaningful, honest response'. /It was as much Verk himself as it was that people had allowed Verk to/ become /this way/, Grav guessed.
 
@@ -85,13 +85,13 @@ The click of his hyena spurs[fn:: These are raptor talon that are strung by sine
 
 It was a dizzying thought. 'Maybe others /also/ do and say as I do in those situations.' This occurred to him along with another thought that was surely worth scratching: 'The inner caveperson in another caveperson, was just like my inner caveperson. I am not special. Others are not just /things/ for me to use. I cannot know if there really is someone in there! I will never know, but life goes better if I assume there is another "me" behind other's eyes. And maybe even a friend', Grav felt an odd cringe at that last part that he didn't understand.
 
-Grav and Gog were to be at The Helpful Monkey River-Join by three sun-palm from dawn. Grav sprinted into the clearing with spear and atlatl strapped to is back in not-ready form, and smoothly slowed to a trot. They were only carried for opportunistic hunting. This was another predict-tool of theirs. The prediction was: You could do hunting almost as effectively as you normally do, while doing something completely unrelated that involved walking through the woods. "A Forest Wanderer Never Hunts", was a saying they thought worth wide adoption. For most cavemen hunting was an "activity" and the rest of the time was to be used doing nothing, showing off, or fighting with your neighbors.
+Grav and Gog were to be at The Helpful Monkey River-Join by three palm from dawn. Grav sprinted into the clearing with spear and atlatl strapped to his back in not-ready form, and smoothly slowed to a trot. They were only carried for opportunistic hunting. This was another predict-tool of theirs. The prediction was: You could do hunting almost as effectively as you normally do, while doing something completely unrelated that involved walking through the woods. "A Forest Wanderer Never Hunts", was a saying they thought worth wide adoption. For most cavemen hunting was an "activity" and the rest of the time was to be used doing nothing, showing off, or fighting with your neighbors.
 
 Gog was there, clearly lost in thought but aware of Grav's arrival.
 
 In each hand, Grav was carrying a large hemp basket, heavy with the best mining equipment they could conjure.
 
-As Grav approached the glade that at the very crook of the confluence[fn:: Where, legend has it, the Crec clan and culture had its beginnings.]. Taking /the short way/ Grav had to stop and repair the twist-vine bridge crossing The Great Meal Stone's last angry-cauldron, which delayed him a half-palm.
+As Grav approached the glade at the very crook of the confluence[fn:: Where, legend has it, the Crec clan and culture had its beginnings.]. Taking /the short way/ Grav had to stop and repair the twist-vine bridge crossing The Great Meal Stone's last angry-cauldron, which delayed him a half-palm.
 
 Gog watched expressionless as Grav approached.
 
@@ -101,7 +101,7 @@ All this angry water out of place created a truly odd and kind of magical Forest
 
 Gog had once put a straight, stiff stick hard against a boulder near one of the more dramatic cascades. Putting his ear up to the other end, he could definitely hear an /audible/ hum that was clear and distinct from the surrounding tempest of noise.
 
-Grav handed the heavier of the baskets to Gog. He shouted, "Whatever we do, let's get the scat downstream!"
+Grav handed the heavier of the baskets to Gog. He shouted, "Whatever we do, let's get the scat upstream!"
 
 Gog nodded, turned, and led the way.
 
@@ -123,7 +123,7 @@ The croc died in the men's youth, but they both remember having to take the shor
 
 In the comparative quiet, with the nearby cascade only a gurgle, Gog turned to Grav.
 
-"So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of reflect-stone[fn:: Quartz. Both for the obvious reason and also because of what is being discussed here: a vein of quarts has concentrated mirror powers strong enough to create another one, just like it, feet away. It is thought that the formation of a reflected vein of reflect-stone has never been observed because whenever they appeared, they must have appeared together. Crec did not recoil in terror at their reflection. They had mirrors of various types. But they did have a very mystical concept of a "reflection" and didn't blithely play around with mirrors.] often has a twin a few feet or yards away, to one side or the other. And most value-stone grow in neat patterns, just like reflect-stone.
+"So, I was thinking. These veins run in parallel, probably. I mean, I've seen that in lots of places with regular rock. And the vein goes from within the earth, upwards, which is /also/ where you see the parallel veins in regular rock. A vein of reflect-stone[fn:: Quartz. Both for the obvious reason and also because of what is being discussed here: a vein of quarts has concentrated mirror powers strong enough to create another one, just like it, feet away. It is thought that the formation of a reflected vein of reflect-stone has never been observed because whenever they appeared, they must have appeared together. Crec did not recoil in terror at their reflection. They had mirrors of various types. But they did have a very mystical concept of a "reflection" and didn't blithely play around with mirrors.] often has a parallel twin a man or two away, to one side or the other. And most value-stone grow in neat patterns, just like reflect-stone.
 
 Since we know that the river has eroded much of one side, snaking in and out; it pretty much parallels our first 'vein'[fn:: Gog was being colorful with his language because when they said 'vein' it referred to a /pattern of deposits/ and not much more. It was assumed to be a vein of sorts because it seemed to go in a straight line and keep producing even if you dug downward.], I'm thinking lets concentrate on upstream where it cuts in and out of a vein that might have been there."
 
@@ -139,7 +139,7 @@ Grav was quite for a bit and then spoke. "Gog?"
 
 "How do you feel about Father-Brother Verk?"
 
-Gog didn't react but continue to stared at a falls. He spoke softly at first.
+Gog didn't react but continued to stared at a falls. He spoke softly at first.
 
 "Why?"
 
@@ -155,9 +155,9 @@ Grav interjected, "Don't you feel like that could have some push-back? Treating 
 
 "Heh. Yeah, I have definitely seen that effect in play with some people. It exists like rocks[fn:: "it is a thing"]. And I don't think you're way off the mark.", agreed Gog.
 
-"And also," Grav expended on his unoriginal theory. "wouldn't that kind of thing feed back on itself, rapidly?
+"And also," Grav expanded on his unoriginal theory. "wouldn't that kind of thing feed back on itself, rapidly?
 
-If you've driven those away who just /reasonably/ object to whatever urgent thing you're being lectured on, what's left over are a particular kind of caveperson. Kind of the last-part I'll call it. Or no, the 'tail', like what you see disappearing into the bush when you've scared off a big lizard. There's a part that hangs around a bit longer. The 'tail'. Father-Brother Verk's tail of hangers-on are desperate for his approval. They will silently undergo /even worse/ mistreatment by him[fn:: They both felt a stir referring to Verk this way.] which in turn means that mistreatment can /expand/ and meet the new allowance, and so a person's[fn:: Gog was trying to steer back into the /abstract/ caveperson as the topic of conversation.] behavior can get /more/ extreme, which scares those around even more, making them willing to just let any kind of behavior go; pretend it didn't happen. Do whatever, just don't get 'kicked out', you know what I mean? Rather simple people, usually.
+If you've driven those away who, on occasion, just /reasonably/ object to whatever urgent thing they're being lectured on, what's left over are a particular kind of caveperson. Kind of the last-part I'll call it. Or no, the 'tail', like what you see disappearing into the bush when you've scared off a big lizard. There's a part that hangs around a bit longer. The 'tail'. Father-Brother Verk's tail of hangers-on are desperate for his approval. They will silently undergo /even worse/ mistreatment by him[fn:: They both felt a stir referring to Verk this way.] which in turn means that mistreatment can /expand/ and meet the new allowance, and so a person's[fn:: Gog was trying to steer back into the /abstract/ caveperson as the topic of conversation.] behavior can get /more/ extreme, which scares those around even more, making them willing to just let any kind of behavior go; pretend it didn't happen. Do whatever, just don't get 'kicked out', you know what I mean? Rather simple people, usually.
 
 Cult of Verk has a long tail." He said without thinking.
 
@@ -169,7 +169,7 @@ Gog made a pouty lower lip face at him. He pantomimed a child about to cry, with
 
 Grav felt like they were nearing a point where they both just wanted to drop the prefixes and the pretense. Their many heretical conversations had a rhythm they both knew well: Adjust loudness based upon scandalousness, try to use a lot of mutually-understandable wrapper language, even when no one is around (and no one /should/ be), and speak the polite deferential, pious parts just above normal conversational volume.
 
-"Uh-huh. Don't act like you haven't been there. Being shunned by The Great Bear[fn:: This term is used more or less equally in both reverence and mockery.] on the one hand is just dew off the leaf, but on the other hand."
+"Uh-huh. Don't act like you haven't been there. Being shunned by The Great Bear[fn:: This term is used more or less equally in both reverence and mockery.] on the one hand is just dew off the leaf, but on the other hand..."
 
 Grav paused and stared into the distance, slowly squinting his eyes with some kind of mental strain.
 
@@ -210,7 +210,7 @@ Gog's helpful contribution, which now looked like a monstrous, tired giraffe lea
 
 Its justifying feature was a relay of split bamboo culverts that made about a five pinkie-thumb diameter[fn:: Bamboo, being well "engineered", can scale even bigger than this. This was not the biggest bamboo available to them (although this was definitely on the larger side), but, yes, it is far larger than anything you may have seen.] channel for water. Big enough for an all-finger child to use as a kind of water slide, which happened only once. All the splicing work had been done expertly, so it was about as water-tight as a stone channel over a rope bridge, but it could /swivel/. It was fed by the river starting about one and half of one boulder-door[fn:: 100]. men upstream.[fn:: As the math is tedious here: about 300 meters. Crec reckoning is covered in the appendix.]
 
-The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had a polished, dense, shiny sections at intervals where the oiled oak bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 men length and continuously gave a heavy, ongoing, cold, laminar punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
+The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had polished, dense, shiny sections at intervals where the oiled[fn:: Bear] oak bearings burnished the wood. Once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 man length and continuously gave a heavy, ongoing, cold, laminar punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
 
 The poplar had been chosen for its straightness (among other things). With a bit of patience, the sluice could be tuned and squared up such that two men could work it with long pieces of twist-vine, and some heaving.
 
@@ -232,7 +232,7 @@ These where the "Feelers". The river water, being completely opaque here for obv
 
 This area was often tended by a rather relaxed crew of Soon-Leave to ensure, depending on circumstances, that the newly-mined rocks did not fall into the river or otherwise go missing. They might maintain a berm to check the rocks and boulders at risk of falling back in, depending on circumstances, or sometimes help with the heaving of an especially stubborn rock. A lot of what the Soon-Leave did depended on "circumstances".
 
-Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a troupe of especially smart, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
+Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a troupe of especially smart, uniformly brown monkeys working intently on some vast, seemingly pointless project.
 
 They hadn't had the Feelers until about three-part-of-four moons[fn:: About three weeks] ago. Inevitably some Worker's child would be flailing around in the already-worked areas and helpfully point out a healthy sized rock that deserved examination. And, quite rarely, but not never did this turn out to be a real value-stone of a value-stone. Before, they had only been collecting stones small enough to fetch as the were cast up near the surface and there had been general sorting and sifting of the surrounding, more convenient work areas. Having learned that some of the massive rocks were worth their while, a new career track had been born.
 
@@ -264,11 +264,11 @@ Panting, Gog said, "Let's put in a short day, eh? We'll sit in our office[fn:: T
 
 "Well, let's get there first so I can both sit down and also hear myself think, if for no other reason." Grav complained a lot about distractions (what other people called "noise".)
 
-The two men headed down a path that most expediently took them to an area that is 1) far from the river and 2) dense with lush, pleasant jungle. Their office was a clearing in such a place, given the possibly overly enthusiastic effort by both to find the "densest" jungle, the office had a roof! The jungle was more 'carved' here, in three dimensions.
+The two men headed down a path that most expediently took them to an area that is 1) far from the river and 2) dense with lush, pleasant jungle. Their office was a clearing in such a place, and given the possibly overly enthusiastic effort by both to find the densest jungle, the office had a roof! The jungle was more 'carved' here, in three dimensions.
 
-After knocking out a lot of growth they were pleased to find that they had a dappling of sunlight for most of the day provided by a mesh above of healthy[fn:: G&G had a Worker dedicated to caring for what they called their 'office-plants', which for here included some structural engineering skills as well.] variegated, fat, yellow-green leaves sprouting from a cobweb of very determined vine whose corresponding anchoring to the ground was hopelessly undeterminable. It was like a fabric woven of living vine, truly.
+After knocking out a lot of growth they were pleased to find that they had a dappling of sunlight for most of the day provided by a mesh above of healthy[fn:: G&G had a Worker dedicated to caring for what they called their 'office-plants', which in this case called for some engineering experience with 'live loads' as well.] variegated, fat, yellow-green leaves sprouting from a cobweb of very determined vine whose corresponding anchoring to the ground was hopelessly undeterminable. It was like a fabric woven of living vine, truly.
 
-Not telling Gog, Grav would occasionally find an interesting stem to clip near the ground just to admire the unpredictable lightening-bolt path the murdered vine would trace out inside the cube. Gog was irked, Grav got some fun out of it. The vine's would more than grow back either way.
+Not telling Gog, Grav would occasionally find an interesting stem to clip near the ground just to admire the unpredictable lightening bolt path the murdered vine would trace out along the walls and ceiling after shriveling and browning for a few days. Gog was irked, Grav got some fun out of it. The vines would more than grow back either way.
 
 Gog eventually got determined and after a lot of spying eventually found a cleanly snipped vine near the ground, one or two man into the thick web of vine at the base of a wall, which is a trick to do if your goal is to not kill anything else. Gog was still considering what to do with this evidence.
 
@@ -280,9 +280,9 @@ He looked at his left nipple, wrinkling his chin with his determination to get a
 
 "I, uh, said I'd bring him such a stone and /also/ attend drill."
 
-"You fallen-goat! Why the cursed After-Die-World would not just say nothing at all and just /nod/? Child. Do you realize that you immediately took away literally all of your bargaining power in a drop-stone and now you literally have to do exactly that? I mean, /both/ the definitely achievable goal of showing up, **and** finding such a value-stone, which I would imagine I'm going to have to help you with? You prolapsed-rectum."
+"You fallen-goat! Why the cursed After-Die-World would not just say nothing at all and just /nod/? Child. Do you realize that you immediately took away literally all of your bargaining power in a drop-stone and now you literally have to do exactly that? I mean, /both/ the definitely achievable goal of showing up, **and** finding such a value-stone, which I would imagine I'm going to have to help you with? You prolapsed-rectum!
 
-"Why in the goat-sack would you do that? You... Thanks, brother. A squirrel-horde[fn:: The Crec have roughly the same talent for and perception of sarcasm as you.]."
+Why in the goat-sack would you do that? You... Thanks, brother. A squirrel-horde[fn:: The Crec, /especially/ Grav and Gog, have roughly the same talent for and perception of sarcasm as you.]."
 
 "Let's get to work", Grav said.
 
@@ -312,7 +312,9 @@ The two men were exhausted and both thinking it was time to move on to other sch
 
 "Yeah. That contraption we were thinking on to vine those out could stand to be ready about now. That's bigger than the one that inspired us!", said Grav.
 
-"Which, you might add, took four of our biggest Feelers, plus us, to haul out. Only to have Drih smash it to pieces over the course of the whole day, only to find a /couple/ of uvula[fn:: This is the closest and most familiar thing 'pea sized' (and shaped) that the Crav are ever likely to encounter.]" Gog added after some genuine thought, "I think!"
+"Which, you might add, took four of our biggest Feelers, plus us to haul out. We paid Drih an extra one part of all-finger all-finger gourd[fn:: A gourd is /approximately/ one pound of mass<sup>*</sup>. All of the finger math works out to: 1/1000. So this means "one thousandths of a pound of gold", which works out to 0.016 modern gold ounces. Workers wages were always paid in gold. G&G had to pretty much invent the idea of money in order to pay the Workers, and value-butter (gold) was the least ambiguous thing to use, as almost any other thing they could think of had value that was abstract and negotiable. Paying in value-stone would have been like paying modern workers in fine paintings; yes, they have value, but its hard to know just how much without haggling with each and every Worker on pay day (or pay /days/, as payment was cleverly staggered.)
+
+Grav had begun to think about two different /kinds/ of value: The kind that is unambiguous, universally agreed-upon, and easily calculated (like gold), which he called 'fungal' (as it can spread and is uniform, like a fungus.) The other kind is subject to haggling and may vary from one person to the other (like paintings or gems). He called this kind of value 'not-fungal'.] to smash it to pieces over the course of a whole day, only to find a /couple/ of uvula[fn:: This is the closest and most familiar thing 'pea sized' (and shaped) that the Crav are ever likely to encounter.]" Gog added after some genuine thought, "I /think...maybe/!"
 
 "Welp!", said Grav.
 
@@ -352,7 +354,7 @@ The obviousness of it occurred to Gog immediately and he felt ashamed at his na√
 
 Grav and Gog had clambered up to the falls where a dam had been constructed to divert most of the river several months ago.
 
-The twin of a small-one owned by a Worker interrupted a planning meeting in a panic insisting that his brother was pinned under a boulder. After lots of very focused, serious questioning, the boy said this was about two boulder-door men downstream where the river pinched and became more rapid.
+Just after this damn had been constructed, tested, and then disabled, the twin of a small-one thought to be owned by a Worker interrupted a planning meeting in a panic insisting that his brother was pinned under a boulder. After lots of very focused, serious questioning, the boy said this was about two boulder-door men[fn:: About 600 meters.] downstream where the river pinched and became more rapid.
 
 The whole mine had come together to rapidly re-enable the dam to send the river on a different (as of then, virgin) course. The dam consisted of a number of cleverly-fitting pieces, mostly boulders, and could be opened and closed in a short time with enough caveman power. There was lowering the river, and then there was "stopping" the river. There were a few dams. The stated goal of this one was the latter.
 
@@ -384,7 +386,7 @@ We cleared all this up just now."
 
 Both boys ran into the woods and it would turn out, never be seen again by anyone with any confidence[fn:: This was speculated upon and discussed by all for nearly a moon, when work was conducive to idle speculation and clay-talk. A few, but only a few called the mystery 'the twins paradox'.].
 
-On this occasion, the men used the same dam but with some pieces missing. The work was exhausting and they needn't over-do things. The men spent quite a while heaving the boulders into position, each rocking and threatening to topple at any time, and then hopefully being stabilized. Behind this, they put several layers of sturdy woven bamboo screens[fn:: In contrast to bamboo /fiber/ screens, these were literally woven of wrist thick bamboo, which could be accomplished with a lot of steam and crafted lack of perfectionism.].
+On this occasion, the men used the same dam but with some pieces missing. The work was exhausting and they needn't over-do things. The men spent quite a while heaving the boulders into position, each rocking and threatening to topple at any time, and then hopefully being stabilized. Behind this, they put several layers of sturdy woven bamboo screens[fn:: In contrast to bamboo /fiber/ screens, these were literally woven of wrist thick bamboo, which could be accomplished only with a lot of steam and a crafted strategical lack of perfectionism. /Behind this/ the screen featured finer bamboo-fiber mesh, with the forward-most (downstream direction) layer of actual woven bamboo providing the strength required by so much powerfully moving water.].
 
 Once complete, the large boulder in the center of the gouge was not exposed but had only about a palm of muddy water rushing over it. It would do.
 
@@ -440,7 +442,7 @@ Peering inside, between the gap, to see exactly what was there was frustratingly
 
 Grav returned with the two gourds[fn:: Their combined capacity was more like 7 gourd. Do you wonder why a drinking gourd would be three and a half standard gourds in capacity? They were inconsistent, what can one say?] filled with water which he gently poured over the the rock while Gog cleared the silt. They both knew that, whatever's inside, it's not going to be bothered by some water. Nothing that has spent the whole before-and-after-questions in the earth was bothered much by water. They repeated this with an all-finger or so of trips to fetch more water.
 
-Another thing a rock of any kind can tolerate is some gentle nudging with a green twig. Grav explored the parameter of the crack making mental notes. "I'm going to say it: It's exactly like there is a yolk in there."
+Another thing a rock of any kind can tolerate is some gentle nudging with a green twig. Grav explored the perimeter of the crack making mental notes. "I'm going to say it: It's exactly like there is a yolk in there."
 
 "Yum!", said Gog. "Maybe we should just secure it in this position and take it back to the office."
 
@@ -546,7 +548,7 @@ There was no mention from Verk about any possible excused absences from drill fo
 
 Verk had gathered a medium sized crowd into the ancient-speak burrow. The soon-to-be-revealed mineral wonder that the men had to ensure Verk was really there was still awaiting revelation. Verk wanted his own surprise to be genuine and so went along with the men's enthusiasm in describing the find, knowing that over-selling a thing that turned out to be a disappointment for him is something the two boys would include in their calculations.
 
-On the off chance that this was to be underwhelming, Verk tempered his urge to invite the whole clan. He could always claim that, /While exiting, we needn't bother the children with the overwhelming wonders of science[fn:: For most Crec, science just meant 'pretty cool, but in a smart way.'] until a group of/ distinguished /adults had a good examination of it first./
+On the off chance that this was to be underwhelming, Verk tempered his urge to invite the whole clan. He could always claim that, /While exciting, we needn't trouble the children with the overwhelming wonders of science[fn:: For most Crec, science just meant 'pretty cool, but in a smart way.'] until a group of/ distinguished /adults had a good examination of it first./
 
 All invited were present, introductory remarks made, grateful nods made towards Grav and Gog throughout. The quiet chatter among the adults, some giddy, had died down rapidly with an expert cue from Vert; only a small change in his stance and facial expression.
 
@@ -582,7 +584,7 @@ The small crowd of men in the large burrow took turns handling, admiring, indeed
 
 Some of the men, while holding it, managed to quickly have something to say to their neighbor, causing them to just as quickly pass it along. Some made an admiring smile and gave a sideways nod, with raised eyebrows. Those who decided they had something to contribute to the discussion sometimes missed a beat or two in the animated group conversation's rhythm, and stepping in at not quite the right time, said things like...
 
-"Could it be just the front one piece of four of a kind of viper, perhaps?"
+"Could it be just the front one part of four of a kind of viper, perhaps?"
 
 "I have seen weapons much like this!"
 
